Ajuste no componente Menu e atualização do Readme

--- a/src/styles/components/menu.module.css
+++ b/src/styles/components/menu.module.css
@@ -13,6 +13,8 @@
     font-family: 'Quicksand', sans-serif;
     font-size: 1.3rem;
     text-decoration: none;
+    padding: 2rem;
+
 }
 
 .containerLinks {
